--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GAME SPOT - Premium Mini Games Collection</title>
+    <title>GAME SPOT - By GTK Mini Games Collection</title>
     <meta
       name="description"
       content="Premium collection of addictive mini-games. Play Memory Match, Snake, Tic-Tac-Toe, and Color Rush. No ads, no signup required!"
